<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/novigrad"
        android:layout_width="114dp"
        android:layout_height="43dp"
        android:layout_marginTop="68dp"
        android:text="Novigrad"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="53dp"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedules" />

    <EditText
        android:id="@+id/adressedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="110dp"
        android:ems="10"
        android:hint="Adress"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/schedules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/emailedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novigrad" />

    <EditText
        android:id="@+id/passwordedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailedit" />

    <Button
        android:id="@+id/schedules"
        android:layout_width="160dp"
        android:layout_height="67dp"
        android:layout_marginTop="312dp"
        android:text="Set schedules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordedit" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordedit" />

    <TextView
        android:id="@+id/horaire"
        android:layout_width="211dp"
        android:layout_height="140dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="18dp"
        android:text="SCHEDULE DISPLAY"
        app:layout_constraintBottom_toTopOf="@+id/schedules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adressedit" />

    <EditText
        android:id="@+id/serviceEdit"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="Service Type"
        app:layout_constraintBottom_toTopOf="@+id/adressedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>