...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square" />

    <Button
        android:id="@+id/succursaleConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="29dp"
        android:text="Connect Dep"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_signout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateProfile"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/succursaleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="29dp"
...
